# CXKJ_Code

./: .gitignore  CMakeLists.txt  README.md  ver.h.in
cmake/: DefinePlatformSpecifc.cmake  FindMySQL.cmake  FindOpenSSL.cmake
cryptopp/: CMakeLists.txt  CXKJCryptopp.pc.in
cryptopp/cmake/: CXKJCryptoppConfig.cmake
cryptopp/include/CXKJ/Cryptopp/: chacha.h  config.h
cryptopp/src/: blake2-simd.cpp  chacha-simd.cpp  chacha.cpp  lea-simd.cpp  rijndael.cpp  salsa.cpp  simon128-simd.cpp  simon64-simd.cpp  speck128-simd.cpp  speck64-simd.cpp  validat3.cpp
doc/: cmake判断64位.txt  cmake判断平台和编译类型.txt  cmake根据debug release来链接不同名字的库.txt  cmake添加第三方库.txt  cmake添加编译器选项.txt  cmake设置前缀 后缀 扩展名.txt  cmake设置版本.txt  cmake设置生成install等一个目录 .txt  cmake预编译选项.txt  code.txt
g3log/: CMakeLists.txt  CXKJG3Log.pc.in  GenerateMacroDefinitionsFile.cmake
g3log/cmake/: CXKJG3LogConfig.cmake
poco/: CMakeLists.txt
poco/Crypto/: CMakeLists.txt
poco/NetSSL_OpenSSL/: CMakeLists.txt
poco/SQL/MySQL/: CMakeLists.txt
poco/cmake/: FindODBC.cmake
rapid/: CMakeLists.txt  CXKJRapid.pc.in
rapid/cmake/: CXKJRapidConfig.cmake
rapid/include/CXKJ/: xml2json.h
rapid/src/: xml2json.cpp
rcff/: CMakeLists.txt  CXKJRCFF.pc.in
rcff/cmake/: CXKJRCFFConfig.cmake
zlib/: CMakeLists.txt  CXKJZLIB.pc.in
zlib/cmake/: CXKJZLIBConfig.cmake
